# alexa-qa-skill

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  up.sh
app/: config.py  main.py
app/routers/: alexa.py  health.py
app/services/: gemini_service.py
scripts/: list_models.py
